[workspace]
members = ["crates/*"]

resolver = "3"

[workspace.dependencies]
clap = { version = "4.5.41", features = ["derive"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "deny"
correctness = "deny"
suspicious = "deny"
style = "deny"
complexity = "deny"
perf = "deny"
pedantic = "warn"
nursery = "warn"
# cargo = "deny"

[profile.release]
codegen-units = 1
lto = "fat"

